tests/should_fail/terminates/ensures.stderr
error: Mutually recursive functions: when calling `g`...
  --> ensures.rs:8:1
   |
 8 | pub fn g() -> bool {
   | ^^^^^^^^^^^^^^^^^^
   |
note: `g` uses `f`...
  --> ensures.rs:10:9
   |
10 |         f.postcondition((), ())
   |         ^
note: finally `f` calls `g`.
  --> ensures.rs:4:12
   |
 4 | #[ensures(!g())]
   |            ^

error: aborting due to 1 previous error

